--- a/TA 9/google colab/TA9_Panda.ipynb
+++ b/TA 9/google colab/TA9_Panda.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "irBqRi0CNfhl"
       },
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "nETJDRs3n031"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -76,13 +76,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "d1kfX0sQooMD",
-        "outputId": "7cb63443-19cc-4613-d683-2ffafd037f92"
+        "outputId": "a4a50af9-ad1c-43ba-b1ae-1960321dc5f5"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,16 +113,108 @@
         "filtered_data = data[(data['sepal length (cm)'] > 5.0) & (data['sepal width (cm)'] == 3.0)]\n",
         "\n",
         "# Select specific columns\n",
-        "selected_columns = data[['sepal length (cm)', 'sepal width (cm)']]\n",
-        "\n",
-        "# Select rows based on index\n",
-        "row = data.loc[5]  # Select row with index 5"
+        "selected_columns = data[['sepal length (cm)', 'sepal width (cm)']]"
       ],
       "metadata": {
         "id": "Tk0NaKGLn1WR"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accessing rows and columns using loc\n",
+        "\n",
+        "# Select rows based on index\n",
+        "row_index_5 = data.loc[5]  # Select row with index 5\n",
+        "\n",
+        "print(\"\\nRow with index 5:\")\n",
+        "print(row_index_5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "swiMKh31FaaV",
+        "outputId": "af31685f-346d-4a9e-bc80-34e8b1a45fd2"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Row with index 5:\n",
+            "sepal length (cm)    5.4\n",
+            "sepal width (cm)     3.9\n",
+            "petal length (cm)    1.7\n",
+            "petal width (cm)     0.4\n",
+            "target               0.0\n",
+            "Name: 5, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accessing rows and columns using iloc\n",
+        "\n",
+        "# Accessing the first row\n",
+        "print(\"\\nFirst row:\")\n",
+        "print(data.iloc[0])\n",
+        "\n",
+        "# Accessing the first column\n",
+        "print(\"\\nFirst column:\")\n",
+        "print(data.iloc[:, 0])\n",
+        "\n",
+        "# Accessing a specific row and column\n",
+        "print(\"\\nValue at row 2, column 3:\")\n",
+        "print(data.iloc[1, 2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hfx3s3gDE1rk",
+        "outputId": "4a65e394-7f25-47d5-9a71-53f5c40a3245"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "First row:\n",
+            "sepal length (cm)    5.1\n",
+            "sepal width (cm)     3.5\n",
+            "petal length (cm)    1.4\n",
+            "petal width (cm)     0.2\n",
+            "target               0.0\n",
+            "Name: 0, dtype: float64\n",
+            "\n",
+            "First column:\n",
+            "0      5.1\n",
+            "1      4.9\n",
+            "2      4.7\n",
+            "3      4.6\n",
+            "4      5.0\n",
+            "      ... \n",
+            "145    6.7\n",
+            "146    6.3\n",
+            "147    6.5\n",
+            "148    6.2\n",
+            "149    5.9\n",
+            "Name: sepal length (cm), Length: 149, dtype: float64\n",
+            "\n",
+            "Value at row 2, column 3:\n",
+            "1.4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -147,7 +238,7 @@
       "metadata": {
         "id": "nHa9OwmkoAOa"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -173,7 +264,7 @@
       "metadata": {
         "id": "-uVhOLTaoJV0"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -206,9 +297,9 @@
           "height": 472
         },
         "id": "mee38qgooT5v",
-        "outputId": "5206dfda-ef32-440d-c99f-fe7579d1381f"
+        "outputId": "48442474-ab6a-4fd2-9979-af7fe4210b46"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -221,6 +312,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ya4F-fcKFxwH"
+      },
+      "execution_count": 14,
+      "outputs": []
     }
   ]
 }
