--- a/TA 10/google colab/TA_10_itertools.ipynb
+++ b/TA 10/google colab/TA_10_itertools.ipynb
@@ -22,7 +22,7 @@
       "metadata": {
         "id": "r6Ktv-3Ppwor"
       },
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -44,13 +44,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3affm-13ZttP",
-        "outputId": "ecfd70f6-3f61-4742-dbb0-296004cf9ede"
+        "outputId": "83caee6c-8130-42db-fc43-a180e48abd61"
       },
       "outputs": [
         {
@@ -69,6 +69,7 @@
       "source": [
         "data1 = [1, 2, 3]\n",
         "data2 = [4, 5, 6]\n",
+        "\n",
         "combined_iter = itertools.chain(data1, data2)\n",
         "\n",
         "for item in combined_iter:\n",
@@ -97,10 +98,13 @@
       "cell_type": "code",
       "source": [
         "count = 0\n",
-        "for item in itertools.cycle(['a', 'b', 'c']):\n",
+        "\n",
+        "list_abc = ['a', 'b', 'c']\n",
+        "\n",
+        "for item in itertools.cycle(list_abc):\n",
         "    print(item)\n",
         "    count += 1\n",
-        "    if count >= 6:\n",
+        "    if count >= 2*len(list_abc):\n",
         "        break\n",
         "\n",
         "\n",
@@ -111,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sedHRmgTaELz",
-        "outputId": "69a9cf76-450e-41d4-93b8-2de591d82fa3"
+        "outputId": "51ac179d-833c-4696-bef9-cf51441124ef"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,6 +151,7 @@
       "cell_type": "code",
       "source": [
         "perms = itertools.permutations('abc', 2)\n",
+        "\n",
         "for perm in perms:\n",
         "    print(perm)\n",
         "\n",
@@ -158,9 +163,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALmAJGekaVmH",
-        "outputId": "d7b54ccb-4357-431a-87bc-1dc886c01c41"
+        "outputId": "d3c741a1-fec1-4651-8a1c-edb66468456b"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,6 +197,7 @@
       "cell_type": "code",
       "source": [
         "combs = itertools.combinations('abcd', 2)\n",
+        "\n",
         "for comb in combs:\n",
         "    print(comb)\n",
         "\n",
@@ -203,9 +209,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae8d8cb8-58ff-4e44-fe4b-42fa8196aeca"
+        "outputId": "9ada5274-6e00-4ca5-aeca-d757fc9fac0c"
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
